--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -27,7 +27,7 @@
                 android:layout_marginLeft="5dp"/>
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textActionBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
@@ -37,7 +37,7 @@
                 android:textSize="20dp" />
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/buttonSettings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_menu_manage"
