--- a/app/src/main/res/layout/text_content.xml
+++ b/app/src/main/res/layout/text_content.xml
@@ -13,22 +13,22 @@
         android:visibility="visible" />
 
     <ScrollView
-        android:layout_width="409dp"
-        android:layout_height="657dp"
+        android:layout_width="0dp"
+        android:layout_height="650dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="@+id/app_bar_main">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:background="@drawable/side_nav_bar"
+                android:background="@color/purple_700"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -50,7 +50,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:background="@drawable/side_nav_bar"
+                android:background="@color/purple_700"
                 android:orientation="horizontal"></LinearLayout>
 
         </LinearLayout>
