--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="red">#F50909</color>
+    <color name="green">#07B136</color>
+    <color name="blue">#1755BB</color>
+    <color name="yellow">#D0A52B</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
