custom array adapter works

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -21,7 +21,21 @@
         <item>....</item>
         <item>2.....</item>
     </string-array>
+    <string-array name="na_array2">
+        <item>Черви</item>
+        <item>Каша</item>
+        <item>Хлеб</item>
+        <item>....</item>
+        <item>2.....</item>
+    </string-array>
     <string-array name="sna_array">
+        <item>Снасть1</item>
+        <item>Снасть2</item>
+        <item>Снасть3</item>
+        <item>Снасть4</item>
+        <item>Снасть5</item>
+    </string-array>
+    <string-array name="sna_array2">
         <item>Снасть1</item>
         <item>Снасть2</item>
         <item>Снасть3</item>
@@ -36,7 +50,21 @@
         <item>Прикормка4</item>
         <item>Прикормка5</item>
     </string-array>
+    <string-array name="menu_pri2">
+        <item>Прикормка1</item>
+        <item>Прикормка2</item>
+        <item>Прикормка3</item>
+        <item>Прикормка4</item>
+        <item>Прикормка5</item>
+    </string-array>
     <string-array name="menu_raz">
+        <item>Разное1</item>
+        <item>Разное2</item>
+        <item>Разное3</item>
+        <item>Разное4</item>
+        <item>Разное5</item>
+    </string-array>
+    <string-array name="menu_raz2">
         <item>Разное1</item>
         <item>Разное2</item>
         <item>Разное3</item>
